<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin_left"
    android:paddingLeft="@dimen/margin_left"
    android:paddingRight="@dimen/margin_left"
    android:paddingTop="@dimen/margin_left"
    android:background="@drawable/background"
    tools:context="luan.silva.provaluan.Tela2">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:textColorHint="@color/color_hint"
        android:textColor="@color/color_hint"
        android:id="@+id/tela2_nome"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso_atual"
        android:textColor="@color/color_hint"
        android:textColorHint="@color/color_hint"
        android:layout_below="@+id/tela2_nome"
        android:inputType="numberDecimal"
        android:id="@+id/tela2_peso"/>
    ]<EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso_desejado"
        android:layout_below="@+id/tela2_peso"
        android:inputType="numberDecimal"
        android:textColor="@color/color_hint"
        android:textColorHint="@color/color_hint"
        android:id="@+id/tela2_pedo_desejado"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gpsexo"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@+id/tela2_pedo_desejado"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masc"
            android:textColor="@color/color_hint"
            android:id="@+id/tela2_masc"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femi"
            android:textColor="@color/color_hint"
            android:shadowColor="@color/color_hint"
            android:id="@+id/tela2_femi"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@+id/gpsexo"
        android:id="@+id/linear_layout">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tela2_manha"
            android:textColor="@color/color_hint"
            android:text="@string/manha"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarde"
            android:textColor="@color/color_hint"
            android:id="@+id/tela2_tarde"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noite"
            android:textColor="@color/color_hint"
            android:id="@+id/tela2_noite"/>

    </LinearLayout>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@+id/linear_layout"
        android:spinnerMode="dialog"
        android:entries="@array/sp_opt"
        android:id="@+id/sp_opt">

    </Spinner>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@+id/sp_opt"
        android:text="@string/cadastrar"
        android:textColor="@color/btnEntrartText"
        android:background="@color/btnSalvarBack"
        android:id="@+id/tela1_btn_cadastrar"/>


</RelativeLayout>
